sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:8: error: type mismatch;
 found   : List[Int]
 required: scala.collection.mutable.MutableList[Int]
  var playersColor:MutableList[Int] = List(0)
                                          ^